2007-12-04  Julian Lamb
	* src/callbacks.[ch],src/interface.[ch]: Rename GTK widgets to more
	  recognizable names for better code legibility. Change sidebar to a
	  notebook view and add a messages tab. Organize statusbar layout. Add
	  "analyze" menu and move CAM related functions to it. Clean up toolbars
	  and combine into a single toolbar.
	  
2007-11-30  Julian Lamb
	* src/callbacks.[ch],src/interface.[ch],src/gerbv.c: Split out all gui
	  code out of gerbv.c and put it into the standard callbacks/interface
	  files. Started to overhaul gui during the process. Also, speed up the
	  feel of the cairo rendering by rendering layers to a cairo_pattern_t,
	  then compositing using these patterns. This allows the user to pan and
	  get much quicker response while the CPU renders the new view in the
	  background.

2007-11-30  Stuart Brorson sdb (at) cloud9 (dot) net
	*  configure.in, src/exportimage.c, src/gerbv.c,
	src/pick-and-place.c:
	Modify build system so you must explicitly --enable-cairo to
	build using cairo, otherwise build using GDK by default.
	
2007-11-29  Stuart Brorson sdb (at) cloud9 (dot) net
	* src/gerb_file.c, src/gerber.c, src/gerbv.c, src/gerbv_screen.h,
	src/project.c:  Added "File -> Open Gerber(s)" dialog.  Added 
	int screen.last_loaded which keeps track of where to insert the next
	Gerber to be loaded.
	
2007-11-26  Julian Lamb

	* src/draw-gdk.[ch],src/gerber.c: Add gdk rendering code back in so it can
	  be compiled if cairo isn't available.
	* src/gerber.c: Fix g_strconcat calls by adding NULL to end of arguments.
	  
2007-11-20  Julian Lamb

	* src/draw.c: Add rendering code for arcs. Also, fix the rendiring of oval
	  aperatures.

2007-11-19  Julian Lamb

	* src/draw.[ch], examples/am-test/am-test.gbx: Complete the conversion to
	  the cairo rendering code. All aperature macros now render correctly, as
	  well as clear layer polarities. Note that several bugs were found in