@@ -1,3 +1,8 @@
+2007-12-05  Julian Lamb
+	* src/draw.c,src/draw-gtk.c: Fix rendering of lines drawn with rectangular 
+	  aperatures (bug #1834944 and #1704942). Thanks to ineiev for the gdk
+	  patch, which was reworked to apply to the cairo rendering too.
+	  
 2007-12-04  Julian Lamb
 	* src/callbacks.[ch],src/interface.[ch]: Rename GTK widgets to more
 	  recognizable names for better code legibility. Change sidebar to a
